Room Details  - added previous / next buttons (only within the same room type)  - added navigation (back button goes to the previously visited room, navigation bar with the previously visited room at the top of the page)

--- a/JavaSource/messages.properties
+++ b/JavaSource/messages.properties
@@ -193,6 +193,8 @@ button.modifyRoomDepts=Edit Room Availability
 button.modifyRoomGroups=Edit Room Groups
 button.modifyRoomFeatures=Edit Room Features
 button.modifyRoomPreference=Edit Room Preference
+button.previousRoom=Previous
+button.nextRoom=Next
 button.returnToDetail=Back
 button.updatePrefs=Update
 button.clearSubpartPrefs=Clear Subpart Preferences
@@ -315,7 +317,9 @@ title.modifyRoomPeriodPreferences=Modify Room Examination Period Preferences (Al
 title.modifyRoomDepts=Modify Room Availability / Departments (ALT+A)
 title.modifyRoomGroups=Modify Room Groups (ALT+G)
 title.modifyRoomFeatures=Modify Room Features (ALT+F)
-title.modifyRoomPreference=Modify Room Preference (ALT+P)
+title.modifyRoomPreference=Modify Room Preference (ALT+M)
+title.previousRoom=Previous Room (ALT+P)
+title.nextRoom=Next Room (ALT+N)
 title.returnToRoomList=Back to Room List (ALT+B)
 title.returnToDetail=Do not commit any change. Return to Detail Screen (ALT+B)
 title.updatePrefs=Commit changes to database (ALT+U)
